# django_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
disquaire_project/disquaire_project/: asgi.py  settings.py  urls.py  wsgi.py
disquaire_project/store/: forms.py  tests.py  views.py
store/: models.py  urls.py  views.py
store/migrations/: 0001_initial.py
store/templates/store/: base.html  index.html  listing.html
